--- a/eco-common/eco-common-core/pom.xml
+++ b/eco-common/eco-common-core/pom.xml
@@ -73,6 +73,18 @@
             <artifactId>okhttp</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>2.0.5</version>
+        </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>com.alibaba</groupId>-->
+<!--            <artifactId>easyexcel</artifactId>-->
+<!--            <version>3.1.1</version>-->
+<!--        </dependency>-->
+
 
     </dependencies>
 
