增加用户模块基本操作

--- a/eco-user/src/main/resources/bootstrap.yaml
+++ b/eco-user/src/main/resources/bootstrap.yaml
@@ -1,2 +1,15 @@
 server:
   port: 8085
+spring:
+  application:
+    name: eco-user
+  cloud:
+    nacos:
+      # 注册中心
+      discovery:
+        server-addr: xx.xx.xx.xx:8848
+      config:
+        server-addr: xx.xx.xx.xx:8848
+        file-extension: yaml
+        shared-configs[0]:
+          data-id: common-config.yaml
