--- a/eco-user/pom.xml
+++ b/eco-user/pom.xml
@@ -31,15 +31,28 @@
             <artifactId>eco-common-web</artifactId>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.ecouniverse.build</groupId>-->
-<!--            <artifactId>eco-common-mybatis</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.ecouniverse.build</groupId>
+            <artifactId>eco-common-mybatis</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.ecouniverse.build</groupId>
+            <artifactId>eco-common-nacos</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.ecouniverse.build</groupId>
             <artifactId>eco-common-log</artifactId>
         </dependency>
+
+        <!-- Sa-Token 权限认证，在线文档：https://sa-token.cc -->
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot-starter</artifactId>
+            <version>1.34.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
